--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,8 +1,12 @@
 <p-toast></p-toast>
 <div class="app-layout">
-  <app-navbar-list></app-navbar-list>
+  <div class="app-header">
+    <app-navbar-list></app-navbar-list>
+  </div>
   <div class="app-content">
     <router-outlet></router-outlet>
   </div>
+ <div class="app-footer">
   <app-footer></app-footer>
+ </div>
 </div>
