--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -1,83 +1,135 @@
-<nav class="navbar align-items-center justify-content-evenly ">
-  <ul class="menu flex flex-row justify-content-between  ">
-      <li class="menu-item ">
-        <img src="assets/images/OI_logo.png" height="60" class="mr-2" [routerLink]="['/pages','product']" />
-      </li>
+<nav class="navbar align-items-center justify-content-evenly">
+  <ul class="menu flex flex-row justify-content-between">
     <li>
-      <ul class="flex flex-row align-items-center">
+      <div class="flex flex-row align-content-center">
+        <div>
+          <img
+            src="assets/images/OI_logo.png"
+            height="30"
+            class="mr-2"
+            [routerLink]="['/pages', 'product']"
+          />
+        </div>
+        <div>
+          <h1 class="title" [routerLink]="['/pages', 'product']">
+            Orion Innovation
+          </h1>
+        </div>
+      </div>
+    </li>
+    <li>
+      <ul
+        class="right-menu flex flex-row align-items-center justify-content-around"
+      >
         <li>
-          <select (change)="setLanguage()" [(ngModel)]="selectedLanguage" class="custom-select flex border-0 text-lg ml-3">
-            <option *ngFor="let option of stateOptions" [ngValue]="option.value">{{ option.label }}</option>
-          </select>
-         </li>
-         <li>
-          <p-menubar [model]="items"></p-menubar>
-         </li>
-         <!-- <li>
-          <div class="dropdown">
-            <button class="dropdown-toggle menu-item">
+          <i
+            class="pi pi-shopping-cart"
+            [routerLink]="['/pages', 'shopping-cart']"
+          >
+            <span pBadge [value]="cartsBadge"></span>
+          </i>
+        </li>
+        <li>
+          <i class="pi pi-shopping-bag" [routerLink]="['/pages', 'orders']">
+            <span pBadge [value]="orderBadge"></span>
+          </i>
+        </li>
+        <li>
+          <i class="pi pi-heart" [routerLink]="['/pages', 'favorites']">
+            <span pBadge [value]="favoritesBadge"></span>
+          </i>
+        </li>
+        <li>
+          <div class="dropdown-container">
+            <button class="button" (click)="toggleDropdown()">
+              <span>
                 <span class="item-icon">
-                    <i class='pi pi-user'></i>
+                  <i class="pi pi-user"></i>
                 </span>
-                <span class="item-txt">
-                    Enes Yilmaz
-                </span>
+                <span class="item-txt"> {{user?.name| uppercase }} {{ user?.surname | uppercase}}  </span>
+
+              </span>
+              <span *ngIf="!isOpen"><i class="pi pi-chevron-down"></i></span>
+              <span *ngIf="isOpen"><i class="pi pi-chevron-up"></i></span>
             </button>
-            <ul class="dropdown-menu">
-                <li class="menu-item ">
-                  <a [routerLink]="['/pages','account']">
-                    <i class="pi pi-user"></i> {{'navigationForm.account' | transloco}}
+            <div class="dropdown-content" *ngIf="isOpen">
+              <ul class="dropdown-menu">
+                <li class="menu-item">
+                  <a [routerLink]="['/pages', 'account']">
+                    <i class="pi pi-user"></i>
+                    {{ "navigationForm.account" | transloco }}
                   </a>
                 </li>
-                <li class="menu-item ">
-                  <a [routerLink]="['/pages','shopping-cart']">
+                <li class="menu-item">
+                  <a [routerLink]="['/pages', 'shopping-cart']">
                     <i class="pi pi-shopping-cart">
-                      <span pBadge  [value]="cartsBadge"></span>
-                    </i> {{'navigationForm.cart' | transloco}}
+                      <span pBadge [value]="cartsBadge"></span>
+                    </i>
+                    {{ "navigationForm.cart" | transloco }}
                   </a>
                 </li>
-                <li class="menu-item ">
-                  <a [routerLink]="['/pages','orders']">
+                <li class="menu-item">
+                  <a [routerLink]="['/pages', 'orders']">
                     <i class="pi pi-shopping-bag">
-                      <span pBadge  [value]="orderBadge"></span>
-                    </i> {{'navigationForm.orders' | transloco}}
+                      <span pBadge [value]="orderBadge"></span>
+                    </i>
+                    {{ "navigationForm.orders" | transloco }}
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a [routerLink]="['/pages','favorites']">
+                  <a [routerLink]="['/pages', 'favorites']">
                     <i class="pi pi-heart">
-                      <span pBadge  [value]="favoritesBadge"></span>
-                    </i> {{'navigationForm.favorites' | transloco}}
+                      <span pBadge [value]="favoritesBadge"></span>
+                    </i>
+                    {{ "navigationForm.favorites" | transloco }}
+                  </a>
+                </li>
+                <li class="menu-item flex flex-row">
+                  <i
+                    class="pi pi-user-plus"
+                    style="color: #000; display: flex; margin-right: 15px"
+                  ></i>
+                  <a [routerLink]="['/pages', 'creoter-form']">
+                    {{ "navigationForm.seller" | transloco }}
                   </a>
                 </li>
                 <li class="menu-item">
-                  <i class="pi pi-user-plus">
-                  </i>
-                  <a [routerLink]="['/pages','creoter-form']">
-                    {{'navigationForm.seller' | transloco}}
+                  <a [routerLink]="['/pages', 'about']">
+                    <i class="pi pi-question-circle"></i>
+                    {{ "navigationForm.about" | transloco }}
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a [routerLink]="['/pages','about']">
-                    <i class="pi pi-question-circle"></i> {{'navigationForm.about' | transloco}}
+                  <a [routerLink]="['/pages', 'support']">
+                    <i class="pi pi-question"></i>
+                    {{ "navigationForm.help&support" | transloco }}
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a [routerLink]="['/pages','support']">
-                    <i class="pi pi-question"></i> {{'navigationForm.help&support' | transloco}}
+                  <a (click)="logout()">
+                    <i class="pi pi-sign-out"></i>
+                    {{ "navigationForm.logout" | transloco }}
                   </a>
                 </li>
-                <li class="menu-item">
-                  <a (click)="logout()" >
-                    <i class="pi pi-sign-out"></i> {{'navigationForm.logout' | transloco}}
-                  </a>
-                </li>
-            </ul>
+              </ul>
+            </div>
           </div>
-         </li> -->
+        </li>
+        <li>
+          <select
+            (change)="setLanguage()"
+            [(ngModel)]="selectedLanguage"
+            class="custom-select"
+          >
+            <option
+              *ngFor="let option of stateOptions"
+              [ngValue]="option.value"
+            >
+              {{ option.label }}
+            </option>
+          </select>
+        </li>
       </ul>
     </li>
-      </ul>
+  </ul>
 </nav>
-
-
