--- a/src/app/pages/components/navbar-list/navbar-list.component.scss
+++ b/src/app/pages/components/navbar-list/navbar-list.component.scss
@@ -1,86 +1,3 @@
-.navbar {
-  justify-content: start;
-  align-items: center;
-  text-align: start;
-  background-color: transparent;
-  backdrop-filter: blur(5px);
-  cursor: pointer;
-  color: #fff;
-  margin: 0;
-  position: relative;
-  width: 100%;
-}
-
-.dropdown {
-  height: fit-content;
-  position: relative;
-  display: inline-block;
-}
-.dropdown-toggle {
-  background-color: transparent;
-  color: #333;
-  padding: .75rem 2.5rem;
-  border: none;
-  border-radius: .5rem;
-  cursor: pointer;
-}
-
-.dropdown-menu {
-  position: absolute;
-  top: 100%;
-  left: -20px;
-  background-color: transparent;
-  border-radius: 1rem;
-  padding: 0;
-  list-style: none;
-  display: none;
-}
-.dropdown-menu .menu-item:first-child{
-  border-radius: 1rem 1rem 0 0 ;
-}
-.dropdown-menu .menu-item:last-child{
-  border-radius: 0 0 1rem 1rem  ;
-}
-.dropdown-menu .menu-item {
-  width: 180px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  padding: 1rem 1rem;
-  background-color: #fff;
-  border: none;
-  font-size: 0.4rem;
-}
-.dropdown-menu .item-icon i{
-  font-size: 10px;
-  color: #000;
-}
-.dropdown-menu .item-txt{
-  width: 50%;
-  text-align: left;
-}
-.dropdown-menu .menu-item:hover{
-  cursor: pointer;
-  color: rgb(19, 98, 255);
-}
-button:focus ~ .dropdown-menu {
-  display: block;
-}
-
-.dropdown-menu .attribute{
-  position: absolute;
-  bottom: 10px;
-}
-
-@media (max-width:768px) {
-  .dropdown{
-      width: 350px;
-  }
-  .dropdown-menu .menu-item{
-      width: 320px;
-  }
-}
-
 ul {
   display: block;
   list-style-type: none;
@@ -88,64 +5,144 @@ ul {
   margin-block-end: 0;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 40px;
+  padding-inline-start: 0px;
 }
+.navbar {
+  justify-content: start;
+  align-items: center;
+  text-align: start;
+  background-color: transparent;
+  cursor: pointer;
+  color: #fff;
+  width: 100%;
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+
+
+.dropdown-container {
+  position: relative;
+  align-items: center;
+  display: flex;
+  justify-content: flex-start;
+
+  .button {
+    background-color: transparent;
+    color: #333;
+    padding: 10px;
+    border: none;
+    cursor: pointer;
+
+    .item-icon {
+      margin-right: 5px;
+    }
+
+    .item-txt {
+      font-size: 1.2rem;
+    }
+
+    i.pi {
+      font-size: 1rem;
+    }
+
+    i.pi-chevron-down,
+    i.pi-chevron-up {
+      font-size: 1rem;
+      color: #333333cb;
+    }
+  }
+
+  .dropdown-content {
+    position: absolute;
+    background-color: #f9f9f9;
+    padding: 5px;
+    top: 100%;
+    right: -30px;
+    width: 180px;
+    border-radius: 8px;
+    z-index: 2;
+
+    ul.dropdown-menu {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+
+      .menu-item {
+        padding: 5px;
+        display: flex;
+        font-size: 1.2rem;
+
+        a {
+          display: flex;
+          align-items: center;
+          color: #333;
+          text-decoration: none;
+
+          i.pi {
+            display: flex;
+            margin-right: 15px;
+            font-size: 1rem;
+          }
+        }
+
+        &:hover {
+          background-color: #ddd;
+        }
+      }
+    }
+  }
+}
+
+
+
 
 .navbar a {
   color: #fff;
 }
 
 .navbar{
-  .menu {
-    justify-content: start;
-    text-align: start;
-    align-items: center;
-  }
-  .menu-item {
-    list-style-type: none;
-    cursor: pointer;
 
-    i {
-      font-size: 15px;
-      color: #000;
-    }
+  .title{
+    letter-spacing: 0;
+    font-weight: bold;
+    font-size: 2rem;
   }
-  .menu-item a {
-    text-decoration: none;
-    color: #000;
-    font-size: 10px;
-    margin: 5px;
-  }
-
   .custom-select {
     color: #000;
     border: none;
     background: transparent;
+    font-size: 1.2rem;
   }
+  .right-menu{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 
-  .menu-item i {
-    margin-right: 5px;
+    i{
+      color: #333;
+      font-size: 1.2rem;
+    }
+
+    li{
+      margin-right: 15px;
+    }
   }
-
 }
 
 :host ::ng-deep {
-  .p-panel {
-    background-color: transparent;
-    cursor: pointer;
-    color: #fff;
-    backdrop-filter: blur(15px);
-    margin-top: 0;
-    border: none;
+  .pi-shopping-bag .p-badge {
+    background-color: #3498db;
+    font-size: 0.7rem;
   }
 
   .pi-shopping-bag .p-badge {
-    background-color: #3498db;
-  }
-  .pi-shopping-bag .p-badge {
     background-color: green;
+    font-size: 0.7rem;
   }
+
   .pi-heart .p-badge {
     background-color: red;
+    font-size: 0.7rem;
   }
 }
