--- a/src/app/pages/components/product/card/card.component.scss
+++ b/src/app/pages/components/product/card/card.component.scss
@@ -16,8 +16,9 @@ $background-color: #ecf0f1;
 
 .search{
   display: flex;
-  width: 50%;
+  width: 100%;
   margin: 16px;
+  margin-left: 5px;
   float: right;
 }
 
@@ -28,25 +29,27 @@ $background-color: #ecf0f1;
   flex-direction: column;
   margin: 16px;
   padding: 16px;
+  border-right: 1px solid #d5d6d8;
+
 
   .title{
     border: none;
     background-color: transparent;
-    justify-content: start;
+    justify-content: flex-start;
   }
 
   div{
     height: 50px;
     cursor: pointer;
     display: flex;
-    width: 150px;
+    width: 200px;
     background-color: #fff;
     margin: 15px;
     color: #555;
     text-align: center;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    border:1px solid #566;
+    border:none;
 
     &:hover {
       border-color:$primary-color;
@@ -144,6 +147,18 @@ $background-color: #ecf0f1;
     .p-icon{
       color: RGB(255,170,74);
       width: 10px;
+    }
+  }
+
+  .search {
+    .p-inputtext{
+      width: 815px;
+      background-color: transparent;
+      border: 1px solid #d5d6d8;
+    }
+
+    .p-icon{
+      color: #3b3d3f;
     }
   }
 }
