--- a/src/app/pages/components/product/card/card.component.scss
+++ b/src/app/pages/components/product/card/card.component.scss
@@ -7,11 +7,15 @@ $light-text: #ecf0f1;
 $light-text-hover: #91c9d7;
 $background-color: #ecf0f1;
 
+.card{
+  min-height: 100vh;
+}
 .product-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-start;
   padding: 3px;
+
 }
 
 .search{
@@ -20,6 +24,11 @@ $background-color: #ecf0f1;
   margin: 16px;
   margin-left: 5px;
   float: right;
+
+  .pi-search{
+    color: #555;
+    font-size: 1rem;
+  }
 }
 
 .category-filter{
