--- a/src/app/pages/components/account/userpassword/userpassword.component.scss
+++ b/src/app/pages/components/account/userpassword/userpassword.component.scss
@@ -11,7 +11,6 @@ $background-color: #ecf0f1;
   align-items: center;
   width: 100%;
   margin: 10px;
-  max-height: 100vh;
 
 
   .row {
@@ -33,9 +32,10 @@ $background-color: #ecf0f1;
       align-items: center;
 
       .p-float-label {
-        margin-top:30px;
-        margin-bottom: 30px;
+        margin-top:10px;
+        margin-bottom: 10px;
         position: relative;
+        width: 100%;
 
         i {
           position: absolute;
@@ -49,25 +49,25 @@ $background-color: #ecf0f1;
         }
 
         input {
-          width: 100%; /* İkon boyutu kadar azalt */
+          width: 100%;
           padding: 10px;
-          padding-left: 35px; /* İkonun sağında boşluk bırak */
+          padding-left: 35px;
           font-size: 1rem;
-          border: none;
-          border-bottom: 2px solid #3498db; // veya istediğiniz renk
+          border: 1px solid #3498db;
+
           background-color: transparent;
-          color: #34495e; // veya istediğiniz renk
+          color: #34495e;
           transition: border-color 0.3s;
 
           &:focus {
             outline: none;
-            border-bottom: 2px solid #1071b3; // veya istediğiniz renk
+
           }
         }
 
         label {
           font-size: 0.9rem;
-          color: #34495e; // veya istediğiniz renk
+          color: #34495e;
           margin-left: 30px;
 
         }
@@ -77,7 +77,7 @@ $background-color: #ecf0f1;
     p {
       margin: 10px;
       width: 100%;
-      color: #e74c3c; // veya istediğiniz renk
+      color: #e74c3c;
     }
 
     .button-style {
@@ -89,9 +89,9 @@ $background-color: #ecf0f1;
       button {
         width: 11rem;
         padding: 15px;
-        background-color: #3498db; // veya istediğiniz renk
+        background-color: #3498db;
         justify-content: center;
-        color: #ecf0f1; // veya istediğiniz renk
+        color: #ecf0f1;
         font-size: 1rem;
         border: none;
         border-radius: 4px;
@@ -99,7 +99,7 @@ $background-color: #ecf0f1;
         transition: background-color 0.3s;
 
         &:hover {
-          background-color: #1071b3; // veya istediğiniz renk
+          background-color: #1071b3;
         }
       }
     }
@@ -125,19 +125,19 @@ $background-color: #ecf0f1;
       font-size: 1rem;
     }
     input {
-      width: 100%; /* İkon boyutu kadar azalt */
+      width: 100%;
       padding: 10px;
-      padding-left: 35px; /* İkonun sağında boşluk bırak */
+      padding-left: 35px;
       font-size: 1rem;
-      border: none;
-      border-bottom: 2px solid #3498db; // veya istediğiniz renk
+      border: 1px solid #3498db;
+
       background-color: transparent;
-      color: #34495e; // veya istediğiniz renk
+      color: #34495e;
       transition: border-color 0.3s;
 
       &:focus {
         outline: none;
-        border-bottom: 2px solid #1071b3; // veya istediğiniz renk
+
       }
     }
   }
